--- a/ios/LordofArenaOceans/Info.plist
+++ b/ios/LordofArenaOceans/Info.plist
@@ -49,5 +49,17 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCameraUsageDescription</key>
+	<string>This app requires access to your camera to take photos.</string>
+
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app requires access to your photo library to select images.</string>
+
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>This app requires permission to save images to your photo library.</string>
+
+	<key>NSPhotoLibraryUsageDescription</key>
+<string>This app needs access to your photo library to share images.</string>
+
 </dict>
 </plist>
